# living-composition

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  style.css  vite.config.js  wrangler.toml
.github/workflows/: cd.yml
analysis/: pyproject.toml
analysis/src/analysis/: convert.py
app/: index.html  style.css  t1.html  t2.html  t3.html  t4.html  t5.html  v1.html  v2.html  v4.html  v5.html
app/data/: compositions.json
app/js/: generate.js  main.js  morph.js  render.js
data/: composition.schema.md  compositions (17).json  compositions (4).json  compositions.json
editor/: canvas.js  grid.js  index.html  main.js  sidebar.js  state.js  style.css
js/: generate.js  library.js  main.js  morph.js  render.js
scripts/: extract_composition.py
