[project]
name = "living-composition-analysis"
version = "0.1.0"
description = "Convert Mondrian dataset to JSON for Living Composition"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.12",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
